fix: flickering errors and authorization check

--- a/src/components/changePassword/changePassword.module.scss
+++ b/src/components/changePassword/changePassword.module.scss
@@ -1,7 +1,7 @@
 .changePasswordForm {
 	display: flex;
 	flex-direction: column;
-	gap: 1.875rem;
+	gap: 1.5rem;
 	width: 30vw;
 	margin-top: 1rem;
 	align-items: center;
@@ -18,7 +18,9 @@
 	cursor: pointer;
 	box-sizing: border-box;
 	transition: transform 0.3s ease;
-	width: 20vw;
+	margin-top: 2rem;
+	align-items: center;
+	text-align: center;
 
 	&:hover {
 		transform: scale(1.04);
@@ -30,6 +32,20 @@
 	text-align: left;
 	width: 100%;
 	font-weight: var(--font-weight-bold);
+	margin-bottom: 1rem;
+}
+
+.error {
+	margin-top: -2rem;
+	margin-bottom: -0.9rem;
+	font-size: var(--font-size-l);
+}
+
+.success {
+	margin-top: -2rem;
+	margin-bottom: -0.9rem;
+	color: var(--color-rating-high);
+	font-size: var(--font-size-l);
 }
 
 @media (max-width: 1024px) {
